se modifico el footer

--- a/index.html
+++ b/index.html
@@ -107,11 +107,16 @@
     </main>
     <aside class="aside">
       <div class="aside-content">
-        
+
       </div>
     </aside>
-    <footer class="footer">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum recusandae dolor ut sequi nulla, pariatur mollitia cumque aliquid quos vel facere aliquam repellendus, quod repellat consectetur. Atque voluptatum, perspiciatis eaque odit corrupti magnam, ex earum eum a, repellat dicta architecto mollitia dolores vitae minus porro excepturi ut esse! Accusantium distinctio itaque repudiandae ullam iste minus facilis accusamus nulla similique, ut facere perferendis ratione, enim perspiciatis, dolor, eius quas! Reprehenderit, eaque. Iste optio cum porro rerum animi, quam cumque nam impedit quibusdam, ducimus nisi tenetur consequatur nesciunt, minima ex iusto magni labore hic! Error, aspernatur reiciendis libero quod distinctio dolore hic.</p>
+    <footer class="footer-1">
+    </footer>
+    <footer class="footer-2">
+    </footer>
+    <footer class="footer-3">
+    </footer>
+    <footer class="footer-derechos">
     </footer>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
