se modifico el aside

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, enim. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, dolore? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, praesentium?</p>
           </div>
           <div class="article-item-footer">
-            <aside class="article-item-date">16 junio 2017</aside>
+            <div class="article-item-date">16 junio 2017</div>
             <div class="article-item-link"><a href="#">leer mas</a></div>
           </div>
         </article>
@@ -118,7 +118,9 @@
     </main>
     <aside class="aside">
       <div class="aside-content">
-
+        <div class="aside-content-item">
+          <!-- Aside -->
+        </div>
       </div>
     </aside>
     <footer class="footer-1">
@@ -128,6 +130,9 @@
     <footer class="footer-3">
     </footer>
     <footer class="footer-derechos">
+      <p>
+        by: CristhianChauca@2019
+      </p>
     </footer>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
